# RF-sdr

./: .gitignore  README.md  todo.md
fpga/: fpga_use.md
fpga_programming/: notes.md
gnuradio/: intro.grc  intro.py  lesson12_PSK_Pluto_to_RTL_SDR.py  notes.md  psk_pluto.grc  sine_send_receive.grc  version.py
python/: receiving.py  transmitting.py
python/resampling/: notes.md  upsample.py
python/sk_modulation/: notes.md  psk4_txrx.py  todo.md
python/usb_bandwidth_check/: bandwidth_check.py  bandwidth_check_cpy.py  todo.md
resources/: notes.md
setup/: bandwidth_check.py  setup.md
setup/resources/fpga/: notes.md
setup/resources/video_1/: notes.md
snippets/: todo.md
snippets/adi/: default_power.py  todo.md
snippets/adi/qpsk/: qpsk.py
snippets/adi/resampling/: downsample.py  notes.md  upsample.py
snippets/adi/sine_txrx/: send_receive_sine.py
snippets/custom_vhdl_addition/: notes.md
snippets/driver_interaction/: .gitignore  plot.py
snippets/driver_interaction/iio_client/: CMakeLists.txt  notes.md
snippets/driver_interaction/iio_client/helper_lib/src/: csv_writer.c
snippets/driver_interaction/iio_client/src/: main.c
snippets/driver_interaction/iio_driver/: notes.md
snippets/driver_interaction/iio_server/: CMakeCache.txt  CMakeLists.txt  Makefile  ads9361_test  notes.md  working_notes.md
snippets/driver_interaction/iio_server/helper_lib/include/: csv_writer.h  gnu_plot_lib.h
snippets/driver_interaction/iio_server/helper_lib/src/: calc.c  csv_writer.c  csv_writer.cpp  gnu_plot_lib.c
snippets/driver_interaction/iio_server/src/: main.c
snippets/driver_interaction/iio_server_working/: CMakeLists.txt  notes.md
snippets/driver_interaction/iio_server_working/src/: main.c
snippets/gnuplot_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gnuplot_test  main  main.c
snippets/gnuplot_test/src/: main.c
snippets/raw/sine_txrx/: CMakeCache.txt  CMakeLists.txt  Makefile  ads9361_test  ads9361_test.c  cmake_install.cmake  notes.md
